--- a/TODO
+++ b/TODO
@@ -1,29 +1,3 @@
-Authorize
-- option to not use password 
-
 
 Tweeter.py
-- compose 3. 
-- reply 4. 
-- test favorite 1.
-- test retweet 2.
-- paginate tweets/specific number 6.
-    - only output specific number of tweets
-    - page through new tweets
-    - separate into method so it can be used for search/trends too
-- bookmark 5.
-- local bookmarks 9.
-    - directory style tweet storage on local machine
-- schedule 10.
-- see trends 8.
-- search 7.
-- document everything 11.
-
-
-downloader.py
-- download on user startup
-- download favorites
-- download tweets
-- download retewets
-- statsheet 
-
+- document and push
